# codegen-rs

./: Cargo.toml  README.md
src/: const.rs  field.rs  fields.rs  function.rs  item.rs  lib.rs  module.rs  scope.rs  struct.rs  type.rs  variant.rs
tests/: codegen.rs
