[package]
name = "codegen-rs"
version = "0.1.0"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Arijit Basu <hi@arijitbasu.in>"]
description = "Library for generating Rust code"
homepage = "https://github.com/sayanarijit/codegen-rs"
repository = "https://github.com/sayanarijit/codegen-rs"
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
indexmap = "1.9.1"
